# r-approx

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: approximator.rs  csv_io.rs  main.rs  polynomial.rs  thermo_model.rs
src/approximator/: frame.rs
src/approximator/frame/: row.rs
src/thermo_model/: frame.rs  plotter.rs
src/thermo_model/frame/: row.rs
test/: old_data.txt  old_data_auto_model.txt  old_data_model.md  test_data.csv  test_data_auto_model.txt  test_data_model.md  wrong_data.csv
