[package]
name = "r-approx"
version = "0.0.1"
authors = ["Roman Bolgov"]
description = "TPK-K thermocompensator"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = "1.0"
serde_derive = "1.0"
